--- a/YumYumDeliv/yum_deliv/templates/RestAdmin.html
+++ b/YumYumDeliv/yum_deliv/templates/RestAdmin.html
@@ -187,8 +187,8 @@
             <input type="text" class="form-control" id="name_rest" name="name_rest" value="{{ rest.0.name }}" required>
         </div>
         <div class="mb-3">
-            <label for="adress_rest" class="form-label">Адресс ресторана:</label>
-            <input type="text" class="form-control" id="adress_rest" name="adress_rest" value="{{ rest.0.adress }}" required>
+            <label for="address_rest" class="form-label">Адресс ресторана:</label>
+            <input type="text" class="form-control" id="address_rest" name="address_rest" value="{{ rest.0.adress }}" required>
         </div>
         <label for="type-rest">Тип ресторана:</label>
         <select class="js-select2" id="type-rest" name="type-rest" placeholder="Выберите тип ретсорана" style="width: 150px">
@@ -203,8 +203,8 @@
             <input type="text" class="form-control" id="representative" name="representative" value="{{ rest.0.representative }}" required>
         </div>
         <div class="mb-3">
-            <label for="url_adress" class="form-label">Адрес URL:</label>
-            <input type="text" class="form-control" id="url_adress" name="url_adress" value="{{ rest.0.url_address }}" required>
+            <label for="url_address" class="form-label">Адрес URL:</label>
+            <input type="text" class="form-control" id="url_address" name="url_address" value="{{ rest.0.url_address }}" required>
         </div>
         <div class="mb-3">
             <label for="avg_time_cook" class="form-label">Cреднее время приготовления (в минутах):</label>
