--- a/YumYumDeliv/yum_deliv/templates/Resataurant.html
+++ b/YumYumDeliv/yum_deliv/templates/Resataurant.html
@@ -79,7 +79,7 @@
         </div>
     </div>
 </div>
-
+<script>localStorage.setItem('url_rest', JSON.stringify('{{restaurant.0.url_address}}'));</script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="{% static 'js/homepage.js' %}"></script>
