Slide-shop cart

--- a/YumYumDeliv/yum_deliv/templates/PlaceOrder.html
+++ b/YumYumDeliv/yum_deliv/templates/PlaceOrder.html
@@ -30,6 +30,10 @@
         }
 
         .logo-compani {
+            display: inline-block;
+            max-width: 100%; /* Максимальная ширина блока по размеру контейнера */
+            border: 1px solid #ccc;
+            padding: 10px;
             margin-left: 20px; /* Добавлено: отступ слева от логотипа */
         }
 
