--- a/YumYumDeliv/yum_deliv/static/css/homepage.css
+++ b/YumYumDeliv/yum_deliv/static/css/homepage.css
@@ -146,7 +146,7 @@ a {
     padding: 5px;
 }
 
-.address-input button {
+.address-input button-dialog {
     margin-left: 10px;
     padding: 5px 10px;
     background-color: #38A9CC;
@@ -326,6 +326,10 @@ body {
 }
 
 .avatar {
+    position: fixed;
+    right: 0;
+    top: 0;
+    margin-top: 10px;
     width: 60px;
     height: 60px;
     max-height: 60px;
@@ -398,11 +402,14 @@ button {
 .menu {
     display: none;
     position: absolute;
-    top: 60px;
     width: auto;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 2;
+}
+
+.menu_top{
+    top: 60px;
 }
 
 .menu ul {
@@ -565,4 +572,8 @@ button {
 .address-container {
     max-width: 500px;
     min-width: 250px;
+}
+
+.modal-backdrop{
+    display: none;
 }
