--- a/YumYumDeliv/yum_deliv/templates/PayOfOrder.html
+++ b/YumYumDeliv/yum_deliv/templates/PayOfOrder.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
-{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Payment</title>
+    <title>Credit Card Form</title>
+
+    <!-- Stripe.js -->
+    <script src="https://js.stripe.com/v3/"></script>
+
+    <!-- Подключение вашего собственного CSS -->
     <link rel="stylesheet" href="{% static 'css/pay_of_order.css' %}">
 </head>
-<body>
-    <h1>Order Payment</h1>
+<body class="container">
 
-    <ul id="cart-list"></ul>
+    <h1 class="mt-5">Order Payment</h1>
 
-    <form id="payment-form">
-        <label for="card_number">Card Number:</label>
-        <input type="text" id="card_number" name="card_number" placeholder="Enter your card number" required>
+    <form id="payment-form" class="mt-3">
+        <div class="mb-3">
+            <label for="card_holder_name" class="form-label">Cardholder Name:</label>
+            <input type="text" id="card_holder_name" class="form-control" placeholder="Enter cardholder name" required>
+        </div>
 
-        <label for="expiry_date">Expiry Date:</label>
-        <input type="text" id="expiry_date" name="expiry_date" placeholder="MM/YYYY" required>
+        <div class="mb-3">
+            <label for="card-element" class="form-label">Credit Card Details:</label>
+            <div id="card-element" class="form-control"></div>
+        </div>
 
-        <label for="cvv">CVV:</label>
-        <input type="text" id="cvv" name="cvv" placeholder="CVV" required>
-
-        <button type="button" id="btn_pay" onclick="processPayment()">Pay Now</button>
+        <button type="button" id="btn_pay" class="btn btn-primary" onclick="processPayment()">Pay Now</button>
     </form>
 
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <!-- Подключение вашего собственного JavaScript -->
     <script src="{% static 'js/pay_of_order.js' %}"></script>
 </body>
 </html>
